--- a/moduleroot/Rakefile.erb
+++ b/moduleroot/Rakefile.erb
@@ -53,6 +53,9 @@ end
 <% checks.each do |check| -%>
 PuppetLint.configuration.send('disable_<%= check %>')
 <% end -%>
+<% @configs['linter_options'].each do |option| -%>
+PuppetLint.configuration.send('<%= option %>')
+<% end -%>
 
 if Bundler.rubygems.find_name('github_changelog_generator').any?
   GitHubChangelogGenerator::RakeTask.new :changelog do |config|
